[tool.poetry]
name = "pyco-apps-github-io"
version = "1.0.0"
description = "Company website for Pyco."
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pyco-apps/pyco-apps.github.io"
keywords = ["documentation", "vfx", "user"]

[tool.poetry.dependencies]
python = "^3.10"
black = "*"
pytest = "7.4.*"
coverage = "7.4.*"
mkdocs = "1.5.3"
mkdocs-material = "9.5.*"
mkdocs-redirects = "1.2.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
